2007-06-16  Neil J. Patel  <njpatel@gmail.com>

	* src/main.c: (main):
	Added a DBus thread init () function.

2007-06-16  Neil J. Patel  <njpatel@gmail.com>

	* COPYING:
	* applets/separator/Makefile.am:
	* applets/separator/applet.c: (awn_applet_factory_init):
	* applets/separator/separator.desktop.in.in:
	* configure.in:
	* libawn/awn-applet.c: (awn_applet_create_default_menu),
	(awn_applet_expose_event):
	* src/awn-applet-manager.c: (awn_applet_manager_load_applets),
	(awn_applet_manager_new):
	* src/awn-bar.c: (awn_bar_class_init), (awn_bar_init),
	(awn_bar_new), (render), (_on_expose), (awn_bar_add_separator):
	* src/awn-bar.h:
	Added a separator applet, which works quite nicely :-).

	* src/main.c: (main):
	Made sure g_thread_init () is called;

2007-06-16  Neil J. Patel  <njpatel@gmail.com>

	* COPYING:
	* INSTALL:
	* Makefile.am:
	* applets/Makefile.am:
	* applets/notification-area/Makefile.am:
	* applets/notification-area/applet.c: (tray_applet_refresh),
	(tray_icon_added), (tray_icon_removed), (tray_icon_message_sent),
	(tray_icon_message_cancelled), (awn_applet_factory_init):
	* applets/notification-area/eggmarshalers.c:
	(_egg_marshal_VOID__OBJECT_STRING_LONG_LONG),
	(_egg_marshal_VOID__OBJECT_LONG):
	* applets/notification-area/eggmarshalers.h:
	* applets/notification-area/eggtraymanager.c:
	(egg_tray_manager_get_type), (egg_tray_manager_init),
	(egg_tray_manager_class_init), (egg_tray_manager_finalize),
	(egg_tray_manager_set_property), (egg_tray_manager_get_property),
	(egg_tray_manager_new), (egg_tray_manager_plug_removed),
	(egg_tray_manager_handle_dock_request), (pending_message_free),
	(egg_tray_manager_handle_message_data),
	(egg_tray_manager_handle_begin_message),
	(egg_tray_manager_handle_cancel_message),
	(egg_tray_manager_handle_event), (egg_tray_manager_window_filter),
	(egg_tray_manager_unmanage),
	(egg_tray_manager_set_orientation_property),
	(egg_tray_manager_manage_xscreen),
	(egg_tray_manager_manage_screen),