@@ -1,1 +1,12 @@
 SUBDIRS = switcher trash
+
+desktopdir = $(libdir)/awn/applets
+
+desktop_DATA = \
+	taskman.desktop
+@INTLTOOL_DESKTOP_RULE@
+
+$(desktop_DATA).in: $(desktop_DATA).in.in
+	sed -e "s|\@PKGDATADIR\@|$(pkgdatadir)|g" $< > $@
+
+extra_dist = $(desktop_DATA).in.in
