@@ -1,0 +1,7 @@
+[Desktop Entry]
+Type=C
+Encoding=UTF-8
+Name=Launcher/Taskmanager
+Comment=The main Awn Luancher/TaskManager applet
+Exec=None
+Icon=/usr/share/avant-window-navigator/avant-window-navigator.svg
